Transform it to an object

--- a/__tests__/GoodNotebooks/testPSExcel.ipynb
+++ b/__tests__/GoodNotebooks/testPSExcel.ipynb
@@ -39,7 +39,7 @@
         {
             "cell_type": "code",
             "source": [
-                "1..10"
+                "1..10 | foreach {[PSCustomObject]@{ID=$_}}"
             ],
             "metadata": {
                 "azdata_cell_guid": "1371ba2d-b882-4aa9-97dd-bd8883b70549"
