Try [System.Environment]::NewLine

--- a/__tests__/NotebooksForUseWithInvokeOutfile/testFile1.ipynb
+++ b/__tests__/NotebooksForUseWithInvokeOutfile/testFile1.ipynb
@@ -26,7 +26,7 @@
         {
             "cell_type": "code",
             "source": [
-                "1..5"
+                "\"Hello World\""
             ],
             "metadata": {
                 "azdata_cell_guid": "04ee7955-4a8c-4961-ac9e-8ae575515363"
