--- a/changelog.ipynb
+++ b/changelog.ipynb
@@ -5,11 +5,21 @@
    "execution_count": 1,
    "metadata": {},
    "source": [
-    "#!pwsh\r\n",
-    "## Set your own path !!\r\n",
-    "cd  C:\\Users\\mcp\\Documents\\GitHub\\PowerShellNotebook\r\n",
-    "import-module .\\PowerShellNotebook.psd1 -force\r\n",
-    ""
+    "#!pwsh\n",
+    "## Set your own path !!\n",
+    "cd ~\\Documents\\GitHub\\\\PowerShellNotebook\n",
+    "import-module .\\powerShellNotebook.psd1 -force"
+   ],
+   "outputs": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "source": [
+    "#!pwsh\n",
+    "ConvertFrom-NotebookToMarkdown -Path .\\__tests__\\DotNetInteractiveNotebooks\\TestWithInvokePS.ipynb -destination demo.md   | out-string\n",
+    "ConvertFrom-NotebookToMarkdown -Path .\\__tests__\\DotNetInteractiveNotebooks\\TestWithInvokePS.ipynb -AsText -Includeoutput | out-string"
    ],
    "outputs": []
   },
@@ -17,7 +27,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ConvertFrom-NotebookToMarkdown "
+    "**Changes to `ConvertFrom-NotebookToMarkdown`**\n",
+    "1. Now Supports `-Path`for the name of the source file\n",
+    "2. Now Supports `-Destination`  (if not specified uses $pwd\\\\\\<name\\>.md)\n",
+    "3. Now supports `[switch] -IncludeOutput` to put output in a \\\"preformated\\\" block - see also get-NotebookContent \n",
+    "4. Now supports AsText "
    ]
   },
   {
@@ -25,209 +39,26 @@
    "execution_count": 1,
    "metadata": {},
    "source": [
-    "#!pwsh\r\n",
-    "ConvertFrom-NotebookToMarkdown -Path .\\__tests__\\DotNetInteractiveNotebooks\\TestWithInvokePS.ipynb -destination demo.md -Includeoutput"
-   ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "\r\n"
-     },
-     "execution_count": 1,
-     "metadata": {}
-    },
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "\r\n"
-     },
-     "execution_count": 1,
-     "metadata": {}
-    },
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "    Directory: C:\\Users\\mcp\\Documents\\GitHub\\PowerShellNotebook\r\n"
-     },
-     "execution_count": 1,
-     "metadata": {}
-    },
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "\r\n"
-     },
-     "execution_count": 1,
-     "metadata": {}
-    },
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "Mode                 LastWriteTime         Length Name\r\n"
-     },
-     "execution_count": 1,
-     "metadata": {}
-    },
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "----                 -------------         ------ ----\r\n"
-     },
-     "execution_count": 1,
-     "metadata": {}
-    },
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "-a---          02/10/2020    08:15            595 demo.md\r\n"
-     },
-     "execution_count": 1,
-     "metadata": {}
-    },
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "\r\n"
-     },
-     "execution_count": 1,
-     "metadata": {}
-    }
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Changes\r\n",
-    "1. Now Supports -Path or -Fullname as a the name of the source file\r\n",
-    "2. Now Supports -Destination  (if not specified uses .\\\\\\<name\\>.ipynb)\r\n",
-    "3. Now supports [switch]-IncludeOutput - Puts output in a \"preformated\" block - see also get-NotebookContent \r\n",
-    "\r\n",
-    "result will be \r\n",
-    "```powershell\r\n",
-    "$PSVersionTable\r\n",
-    "```\r\n",
-    "\r\n",
-    "```\r\n",
-    "Name                           Value\r\n",
-    "----                           -----\r\n",
-    "PSVersion                      7.0.0\r\n",
-    "PSEdition                      Core\r\n",
-    "GitCommitId                    7.0.0\r\n",
-    "OS                             Microsoft Windows 10.0.19041\r\n",
-    "Platform                       Win32NT\r\n",
-    "PSCompatibleVersions           {1.0, 2.0, 3.0, 4.0…}\r\n",
-    "PSRemotingProtocolVersion      2.3\r\n",
-    "SerializationVersion           1.1.0.1\r\n",
-    "WSManStackVersion              3.0\r\n",
-    "```\r\n",
-    "\r\n",
-    "```powershell\r\n",
-    "1..10 | % {\r\n",
-    "    $_ * 2\r\n",
-    "}\r\n",
-    "```\r\n",
-    "\r\n",
-    "```\r\n",
-    "2\r\n",
-    "4\r\n",
-    "6\r\n",
-    "8\r\n",
-    "10\r\n",
-    "12\r\n",
-    "14\r\n",
-    "16\r\n",
-    "18\r\n",
-    "2\r\n",
-    "```\r\n",
-    "\r\n",
-    "```powershell\r\n",
-    "\r\n",
-    "```\r\n",
-    "\r\n",
-    ""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Export-NotebookToPowerShellScript "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "source": [
-    "#!pwsh\r\n",
+    "#!pwsh\n",
     "dir .\\__tests__\\DotNetInteractiveNotebooks\\*.ipynb | Export-NotebookToPowerShellScript -AsText -IncludeTextCells"
    ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": ""
-     },
-     "execution_count": 1,
-     "metadata": {}
-    },
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "<#\n    Created from: C:\\Users\\mcp\\Documents\\GitHub\\PowerShellNotebook\\__tests__\\DotNetInteractiveNotebooks\\TestWithInvokePS.ipynb\n    Created by:   Export-NotebookToPowerShellScript\n    Created on:   02 October 2020 08:06\n#>\n\r\n"
-     },
-     "execution_count": 1,
-     "metadata": {}
-    },
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "$PSVersionTable\r\n"
-     },
-     "execution_count": 1,
-     "metadata": {}
-    },
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "<# #>\r\n"
-     },
-     "execution_count": 1,
-     "metadata": {}
-    },
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "1..10 | % {\n    $_ * 2\n}\r\n"
-     },
-     "execution_count": 1,
-     "metadata": {}
-    }
-   ]
+   "outputs": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Changes \r\n",
-    "1.  Header changed to \r\n",
-    "    * Align text\r\n",
-    "    * Close gap between created by and created on\r\n",
-    "    * Format date as _local long date_ so month is (long has month as words so unambiguous Previously date was culture invariant i.e. US-style 10/2/2020 which reads 10th Feb in the rest of the world. \r\n",
-    "2. Now Supports piped input\r\n",
-    "3. Now Supports -AsText swtich\r\n",
-    "4. (Breaking) IncludeTextCells is now a switch, previously was boolean\r\n",
-    "5. Now if two consequtive cells are code, outputs \"<# #>\" between them, and does not output an empty final cell (this would cause a <# #> at the end of files)\r\n",
+    "**Changes to `Export-NotebookToPowerShellScript`**\n",
+    "1.  Header changed to \n",
+    "    * Align text\n",
+    "    * Close gap between created by and created on\n",
+    "    * Format date as _local long date_ : long has month as words so it is unambiguous Previously date was culture invariant i.e. US-style 10/2/2020 which reads 10th Feb in the rest of the world. \n",
+    "2. Now supports piped input of files \n",
+    "3. Now supports `-AsText` to write to console instead of a file. \n",
+    "4. (**Breaking**) `-IncludeTextCells` is now a `switch`, previously was `boolean`\n",
+    "5. Parameter is now named \"Destination\" with outpath as an alias. If it specifies a directory output will be <<notebook-file-name>>.md\n",
+    "6. Now if two consequtive cells are code, outputs \\\"<# #>\\\" between them, and does not output an empty final cell (this would cause a <# #> at the end of files)\n",
     ""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Get-NotebookContent"
    ]
   },
   {
@@ -235,84 +66,38 @@
    "execution_count": 1,
    "metadata": {},
    "source": [
-    "#!pwsh\r\n",
-    "Get-NotebookContent .\\__tests__\\DotNetInteractiveNotebooks\\TestWithInvokePS.ipynb -Includeoutput -NoMarkdown "
+    "#!pwsh\n",
+    "Get-NotebookContent .\\__tests__\\DotNetInteractiveNotebooks\\TestWithInvokePS.ipynb -Includeoutput -NoMarkdown"
    ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "\r\n"
-     },
-     "execution_count": 1,
-     "metadata": {}
-    },
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "NoteBookName           Type Source                   Output\r\n"
-     },
-     "execution_count": 1,
-     "metadata": {}
-    },
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "------------           ---- ------                   ------\r\n"
-     },
-     "execution_count": 1,
-     "metadata": {}
-    },
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "TestWithInvokePS.ipynb code $PSVersionTable          …\r\n"
-     },
-     "execution_count": 1,
-     "metadata": {}
-    },
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "TestWithInvokePS.ipynb code 1..10 | % {…             2…\r\n"
-     },
-     "execution_count": 1,
-     "metadata": {}
-    },
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "TestWithInvokePS.ipynb code                          \r\n"
-     },
-     "execution_count": 1,
-     "metadata": {}
-    },
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "\r\n"
-     },
-     "execution_count": 1,
-     "metadata": {}
-    }
+   "outputs": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Changes to `Get-NotebookContent`**\n",
+    "1. Now has Aliases for `JustCode` and `JustMarkdown`  and these two are mutually exclusive\n",
+    "2. Now has `-IncludeOutput` switch. (can see the first Item of the second cell). `IncludeOutput` tries to merge multiple text output rows (as generated by .NET Interactive)into a single block. It's been OK with what I've tested but it may need more work to make it properly robust\n",
+    "\n",
+    "**To do** Piping files in doesn't look like it will work.\"\n",
+    ""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Changes \r\n",
-    "1. Now has Aliases for JustCode and JustMarkdown and these two are mutually exclusive\r\n",
-    "2. Now has -Include output switch. (can see the first Item of the second cell). Include output tries to merge multiple text output rows which .NET Interactive generates into a single block. It's been OK with what I've tested but it may need more work to make it properly robust\r\n",
-    "\r\n",
-    "**To do** Piping files in doesn't look like it will work."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# New-psNotebook    "
+    "**Changes to `Add-NotebookCode`**  \n",
+    "1. Can now be given a complex object not just a text stream to include in output. This needs more testing but is designed to support HTML blocks and similar.\n",
+    "2. Can now opt out of creating the GUID. \n",
+    "3. Will process the `#!about` and `#!Time` magic commands and remove the `#!Pwsh` command.\n",
+    "4. When being run from New-PsNotebook, if -IncludeCodeResults was specified results are sent to verbose as well as to the notebook\n",
+    "\n",
+    "**Changes to `New-PsNotebook`**\n",
+    "1. Relocated template for the empty notebook and now provide a second one for .NET Interactive notebooks. \n",
+    "2. Runspace can be provided - remoting FTW! \n",
+    "3. Now takes the absence of a notebookname as impying `-AsText`. Previously it loooked like specifying neither would cause the file to be named just \\\".ipynb\\\" \n",
+    ""
    ]
   },
   {
@@ -320,25 +105,38 @@
    "execution_count": 1,
    "metadata": {},
    "source": [
-    "#!pwsh\r\n",
-    "$pssession =  New-PSSession -ComputerName localhost  -EnableNetworkAccess\r\n",
-    "\r\n",
-    "New-PSNotebook {\r\n",
-    "    Add-NotebookCode \"#!About\" \r\n",
-    "    Add-NotebookCode -Verbose '#!time\r\n",
-    "foreach ($i in 1..3) {$i; Sleep 1}' \r\n",
-    "}  -NoteBookName demo.ipynb -DotNetInteractive -IncludeCodeResults -RunSpace $pssession.Runspace\r\n",
-    "\r\n",
-    "Remove-PSSession $pssession\r\n",
-    "\r\n",
-    "#So I can paste the result \r\n",
-    "ConvertFrom-NotebookToMarkdown .\\demo.ipynb -Includeoutput -AsText | clip"
+    "#!pwsh\n",
+    "\"This session's version is $($PSVersionTable.PSVersion). Compare with version in remote session\"\n",
+    "$pssession = New-PSSession -ComputerName localhost -EnableNetworkAccess ; $computerName = \"localhost\"\n",
+    "# or better $pssession =  New-PSSession -ComputerName $computername\n",
+    "New-PSNotebook {\n",
+    "    Add-NotebookMarkdown   \"# Run Remotely on $computername\"\n",
+    "    switch (Get-NotebookContent  .\\__tests__\\DotNetInteractiveNotebooks\\TestWithInvokePS.ipynb) {\n",
+    "        { $_.Type -eq 'markdown' } { Add-NotebookMarkdown  $_.Source }\n",
+    "        { $_.Type -eq 'code'     } { Add-NotebookCode      $_.source -Verbose }\n",
+    "    }} -IncludeCodeResults  -DNI  \"$computerName.ipynb\" -RunSpace $pssession.Runspace"
    ],
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "\u001b[93mVERBOSE: 1\r\n2\r\n3\r\n\nWall time 3,086ms\u001b[0m\r\n"
+      "text/plain": "This session's version is 7.0.3. Compare with version in remote session\r\n"
+     },
+     "execution_count": 1,
+     "metadata": {}
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "\u001b[93mVERBOSE: \r\nName                           Value                                                               \r\n----                           -----                                                               \r\nPSVersion                      5.1.19041.610                                                       \r\nPSEdition                      Desktop                                                             \r\nPSCompatibleVersions           {1.0, 2.0, 3.0, 4.0...}                                             \r\nBuildVersion                   10.0.19041.610                                                      \r\nCLRVersion                     4.0.30319.42000                                                     \r\nWSManStackVersion              3.0                                                                 \r\nPSRemotingProtocolVersion      2.3                                                                 \r\nSerializationVersion           1.1.0.1                                                             \r\n\r\n\r\n\u001b[0m\r\n"
+     },
+     "execution_count": 1,
+     "metadata": {}
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "\u001b[93mVERBOSE: 2\r\n4\r\n6\r\n8\r\n10\r\n12\r\n14\r\n16\r\n18\r\n20\r\n\u001b[0m\r\n"
      },
      "execution_count": 1,
      "metadata": {}
@@ -349,37 +147,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Changes \r\n",
-    "1. If `New-PSNotebook` is told to include code results `Add-NotebookCode` sends code results to verbose.\r\n",
-    "2. If not including code results `Add-NotebookCode` can be given a complex object not just a text stream to include in output. This needs more testing but is designed to support HTML blocks and similar.  \r\n",
-    "3. Now supports .NET-Interactve format notebooks (moved the templates to the top of PowerShellNotebookDSL.ps1).\r\n",
-    "4. Now supports being passed a runspace - remoting FTW !\r\n",
-    "5. Now takes the absence of a notebookname as impying `-AsText`(in the code block above I could omit the notebook name go straight to | clip without saving a file ). Previously it loooked like specifying neither would cause the file to be named just \".ipynb\" \r\n",
-    "6. Understands *magic commands* : #!time, #!about (both processed) and #!pwsh (removed).\r\n",
-    "\r\n",
-    "Coded above put built this notebook:\r\n",
-    "```powershell\r\n",
-    "#!About\r\n",
-    "```\r\n",
-    "\r\n",
-    "```\r\n",
-    "PowerShell 5.1.19041.1 on FLATFISH, Microsoft Windows NT 10.0.19041.0\r\n",
-    "```\r\n",
-    "\r\n",
-    "```powershell\r\n",
-    "#!time\r\n",
-    "foreach ($i in 1..3) {$i; Sleep 1}\r\n",
-    "```\r\n",
-    "\r\n",
-    "```\r\n",
-    "1\r\n",
-    "2\r\n",
-    "3\r\n",
-    "\r\n",
-    "Wall time 3,116ms\r\n",
-    "```\r\n",
-    "\r\n",
+    "**New-Command `Set-NotebookToPs`**\n",
+    "\n",
+    "Re-writes the metadata in the IPYNB file.     \n",
+    "DotNet Interactive likes to create the file specifying the language as C# and then use a magic command to say \"but this cell is PowerShell\"    \n",
+    "So this changes the metadata to say the language is PowerShell and remove the #!pwsh magic commands. It displays much more nicely in anything else that way.\n",
     ""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Changes to `New-GistNotebook`** \n",
+    "1. Uses another script (which is *not* imported into the module) to get the GitHub private access token from the Windows Cred Store. (It is stored with the name Git:https://github.com)\n",
+    "2. Public / private Gist is now a `-Public` switch (private by default) \n",
+    "3. Accepts input by piping a file to it, see below - content comes from the file, file *name* can be over-ridden but will defualt to the file name. \n",
+    "4. Had MASSIVE problems due to accented characters in some of my test data, so I added `-EscapeHandling EscapeNonAscii` to `ConvertTo-Json` and all is good.  \n",
+    ""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "source": [
+    "#!pwsh\n",
+    "Set-NotebookToPS -Path .\\changelog.ipynb -OutputPath .\\changelog-j.ipynb -PassThru | \n",
+    "    New-GistNotebook -Public -FileName \"PowerShellNotebookModule.ipynb\" -GistDescription \"Changes I made to the module\""
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "https://gist.github.com/2d9025582faa32a2eb00ad9b91483262\r\n"
+     },
+     "execution_count": 1,
+     "metadata": {}
+    }
    ]
   }
  ],
