Aliases and better Gist compatibilty

--- a/changelog.ipynb
+++ b/changelog.ipynb
@@ -92,12 +92,13 @@
     "2. Can now opt out of creating the GUID. \n",
     "3. Will process the `#!about` and `#!Time` magic commands and remove the `#!Pwsh` command.\n",
     "4. When being run from New-PsNotebook, if -IncludeCodeResults was specified results are sent to verbose as well as to the notebook\n",
+    "5. Gist doesn't seem to like CR-LF so I replace CR-LF in output text with LF. \n",
     "\n",
     "**Changes to `New-PsNotebook`**\n",
     "1. Relocated template for the empty notebook and now provide a second one for .NET Interactive notebooks. \n",
     "2. Runspace can be provided - remoting FTW! \n",
     "3. Now takes the absence of a notebookname as impying `-AsText`. Previously it loooked like specifying neither would cause the file to be named just \\\".ipynb\\\" \n",
-    ""
+    "4. Added a `PassThru` switch so it can go straight to a gist or whatever. "
    ]
   },
   {
@@ -147,7 +148,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**New-Command `Set-NotebookToPs`**\n",
+    "**New-Command `Set-NotebookToPS`**\n",
     "\n",
     "Re-writes the metadata in the IPYNB file.     \n",
     "DotNet Interactive likes to create the file specifying the language as C# and then use a magic command to say \"but this cell is PowerShell\"    \n",
