Fix BOM. Better output from ConvertFrom-ipynb

--- a/MarkdownExamples/demo.ipynb
+++ b/MarkdownExamples/demo.ipynb
@@ -1,4 +1,4 @@
-﻿{
+{
     "metadata": {
         "kernelspec": {
             "name": "powershell",
@@ -13,30 +13,23 @@
     },
     "nbformat_minor": 2,
     "nbformat": 4,
-    "cells": [{
-            "cell_type": "markdown",
-            "source": [
-                "# Chapter 1"
-            ],
-            "metadata": {
-                "azdata_cell_guid": "0055dec0-e844-4de2-bdc2-7424bce57554"
-            }
-        },
-        {
-            "cell_type": "code",
-            "source": [
-                "\"Hello World\"\n",
-                ""
-            ],
-            "metadata": {
-                "azdata_cell_guid": "b7f2d298-ea50-4fbe-9fe3-0f751c6038c6"
-            },
-            "outputs": [{
-                "name": "stdout",
-                "text": "Hello World\n",
-                "output_type": "stream"
-            }],
-            "execution_count": 1
-        }
+    "cells": [
+        {"cell_type":"markdown","metadata":{},"source":["# Chapter 1"]},{"cell_type":"markdown","metadata":{},"source":[""]},{
+  "cell_type": "code",
+  "execution_count": 1,
+  "metadata": {
+    "azdata_cell_guid": "02f9d1df-fe44-47e7-847e-e68b99ce282f"
+  },
+  "source": [
+    "\"Hello World\"\r\n"
+  ],
+  "outputs": [
+    {
+      "output_type": "stream",
+      "name": "stdout",
+      "text": "Hello World\n"
+    }
+  ]
+}
     ]
 }
