--- a/testFormatter.ipynb
+++ b/testFormatter.ipynb
@@ -50,6 +50,36 @@
     "for($i = 0; $i -lt 10; $i++) { $i*2; \"test\" 1\r\n",
     "}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "pwsh"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "function foo {\r\n",
+    "    \"hello\"\r\n",
+    "      }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "pwsh"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "function foo {\r\n",
+    "\"hello\"\r\n",
+    " }"
+   ]
   }
  ],
  "metadata": {
