--- a/testFormatter.ipynb
+++ b/testFormatter.ipynb
@@ -80,6 +80,22 @@
     "\"hello\"\r\n",
     " }"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "pwsh"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "$h=@{\r\n",
+    "1='123'\r\n",
+    "123123='asfd'\r\n",
+    "}"
+   ]
   }
  ],
  "metadata": {
